--- a/result.html
+++ b/result.html
@@ -65,7 +65,7 @@
 
             <div class="footer-logo">
             <img src="orange-footer.png">
-                <h1>IG @SOMOS_FENOMENOS</h1>
+                <h1>IG @SOMOS.FENOMENOS</h1>
             </div>
 
             <div class="emails">
