--- a/result.html
+++ b/result.html
@@ -64,7 +64,7 @@
         <footer>
 
             <div class="footer-logo">
-            <img src="orange-footer.png">
+            <img src="new-orange-footer.png">
                 <h1>IG @SOMOS.FENOMENOS</h1>
             </div>
 
