--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- VERSION UPDATED MAY 4 2022 10:05 PM PKT TIME-->
+<!-- VERSION UPDATED MAY 10 2022 15:33 PM MEX TIME-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Somos Fenómenos</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -48,7 +48,7 @@
         </div>
         <div class="texto">
             <span>5</span>
-            <p>¡Listo! Descubre tu radiografía de whatsapp y no olvides compartirla en Instagram etiquetándonos <span class="bold">@somos_fenomenos.</span></p>
+            <p>¡Listo! Descubre tu radiografía de whatsapp y no olvides compartirla en Instagram etiquetándonos <span class="bold">@somos.fenomenos.</span></p>
         </div>
        </div>
    </div>
