--- a/result.html
+++ b/result.html
@@ -37,7 +37,7 @@
             </div> --> 
                 <div class="text-container">
             <p class="textp">[Other person Name] y tu se han enviado: [# of total messages ] cantidad de mensajes</p><br><br>
-            <p class="textp">Todos los días recibes y envías muchos mensajes, si enviaras un mensaje cada hora está conversación lleva <span class="purple">[number of days of ongoing conversation ]</span> horas <span style="color:black;">¿Qué piensas?</span></p>
+            <p class="textp">Todos los días recibes y envías muchos mensajes, si enviaras un mensaje cada hora está conversación lleva <span class="purple">[number of days of ongoing conversation ] horas</span>  <span style="color:black;">¿Qué piensas?</span></p>
             </div>
 
         <div class="keyword-container">
